# trendchimp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
tests/: conftest.py
tests/integration/: test_runner_wiring.py
tests/unit/: test_aggregator.py  test_bot_watchdog.py  test_donchian_strategy.py  test_indicators.py  test_killswitch.py  test_notify.py  test_order_manager.py  test_portfolio_state.py  test_recovery.py  test_resolve_symbols.py  test_risk_manager.py  test_run_once.py  test_safety.py  test_settings.py  test_sizing.py  test_stream_reconnect.py
tests/unit/screener/: test_analyst.py  test_technicals.py  test_universe.py  test_writer.py
trendchimp/: __init__.py  safety.py
trendchimp/cli/: app.py  formatting.py
trendchimp/cli/commands/: positions.py  run.py  screen.py  status.py
trendchimp/clients/: factory.py  market_data.py  trading.py
trendchimp/config/: loader.py  settings.py
trendchimp/data/: aggregator.py  feed.py  models.py  stream_manager.py
trendchimp/indicators/: rolling.py
trendchimp/logging/: setup.py
trendchimp/notify/: __init__.py
trendchimp/orders/: manager.py  models.py
trendchimp/portfolio/: state.py
trendchimp/risk/: killswitch.py  manager.py  sizing.py
trendchimp/runner/: bot.py  recovery.py
trendchimp/screener/: analyst.py  models.py  technicals.py  universe.py  writer.py
trendchimp/signals/: models.py
trendchimp/strategies/: base.py  donchian.py  registry.py
