[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trendchimp"
version = "0.1.0"
description = "Alpaca Donchian/Turtle breakout trend-following bot — paper trading, US equities long & short"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py~=0.43",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pandas>=1.5",
    "numpy>=1.24",
    "click>=8.0",
    "rich>=13.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "freezegun>=1.4",
]

[project.scripts]
trendchimp = "trendchimp.cli.app:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["trendchimp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["trendchimp"]
omit = ["tests/*"]
